--- a/src/services/data/Projects.json
+++ b/src/services/data/Projects.json
@@ -11,7 +11,7 @@
             "React"
         ],
         "url": {
-            "repositoriy": "https://github.com/Elianmtg/Pokedex",
+            "repository": "https://github.com/Elianmtg/Pokedex",
             "deployed": "https://pokedex-elian.vercel.app/"
         },
         "summary": "<p>Pokedex with the functionality: filter all Pokémon, Responsive design just with CSS, useEffect, useState, customHooks and so on.</p>"
@@ -28,7 +28,7 @@
             "React "
         ],
         "url": {
-            "repositoriy": "https://github.com/Elianmtg/Giffy",
+            "repository": "https://github.com/Elianmtg/Giffy",
             "deployed": "https://giffy-elian.netlify.app/"
         },
         "summary": "<p>Gifs finder in React with hooks, custom hooks, lazy load, suspense, infinite scroll, style components, css, test with React Testing Library and munch more.</p>"
@@ -46,7 +46,7 @@
             "JavaScript"
         ],
         "url": {
-            "repositoriy": "https://github.com/Elianmtg/musicArt",
+            "repository": "https://github.com/Elianmtg/musicArt",
             "deployed": "https://elianmtg.github.io/musicArt"
         },
         "summary": "<p>Web Page where you can search and sing the Song of your favorites Artists and at the same time read him/her biography. I used for the Stack for this project HTML, CSS and JavaScript.</p>"
@@ -64,7 +64,7 @@
             "JavaScript"
         ],
         "url": {
-            "repositoriy": "https://github.com/Elianmtg/tvshow",
+            "repository": "https://github.com/Elianmtg/tvshow",
             "deployed": "https://elianmtg.github.io/tvshow"
         },
         "summary": "<p>Web Page where you can search all your favorite Shows. With the Stack HTML, CSS and JavaScript.</p>"
@@ -85,7 +85,7 @@
             "SQL Server"
         ],
         "url": {
-            "repositoriy": "https://github.com/Elianmtg/ControlEstudiantil",
+            "repository": "https://github.com/Elianmtg/ControlEstudiantil",
             "deployed": null
         },
         "summary": "<p>This is the Fronend of a Full Stack project developed to the teachers be able to manage the grades and attendance of theirs students.</p>"
@@ -105,7 +105,7 @@
             "SQL Server"
         ],
         "url": {
-            "repositoriy": "https://github.com/WilkendrysCastillo16/Programacion-Web-Trailers",
+            "repository": "https://github.com/WilkendrysCastillo16/Programacion-Web-Trailers",
             "deployed": null
         },
         "summary": "<p>Web page to management movies trailers. There are two types of user: Client and Admin that is controled with a optional login. The Admin can publish, edit and delete movies trailers.</p>"
