--- a/src/services/data/Projects.json
+++ b/src/services/data/Projects.json
@@ -14,7 +14,9 @@
             "repository": "https://github.com/Elianmtg/Pokedex",
             "deployed": "https://pokedex-elian.vercel.app/"
         },
-        "summary": "<p>Pokedex with the functionality: filter all Pokémon, Responsive design just with CSS, useEffect, useState, customHooks and so on.</p>"
+        "summary": "<p>Pokedex with the functionality: filter all Pokémon, Responsive design just with CSS, useEffect, useState, customHooks and so on.</p>",
+        "next": "Giffy",
+        "previous": null
     },
     {
         "id": 2,
@@ -31,7 +33,9 @@
             "repository": "https://github.com/Elianmtg/Giffy",
             "deployed": "https://giffy-elian.netlify.app/"
         },
-        "summary": "<p>Gifs finder in React with hooks, custom hooks, lazy load, suspense, infinite scroll, style components, css, test with React Testing Library and munch more.</p>"
+        "summary": "<p>Gifs finder in React with hooks, custom hooks, lazy load, suspense, infinite scroll, style components, css, test with React Testing Library and munch more.</p>",
+        "next": "MusicArt",
+        "previous": "Pokedex"
     },
     {
         "id": 3,
@@ -49,7 +53,9 @@
             "repository": "https://github.com/Elianmtg/musicArt",
             "deployed": "https://elianmtg.github.io/musicArt"
         },
-        "summary": "<p>Web Page where you can search and sing the Song of your favorites Artists and at the same time read him/her biography. I used for the Stack for this project HTML, CSS and JavaScript.</p>"
+        "summary": "<p>Web Page where you can search and sing the Song of your favorites Artists and at the same time read him/her biography. I used for the Stack for this project HTML, CSS and JavaScript.</p>",
+        "next": "TvShow",
+        "previous": "Giffy"
     },
     {
         "id": 4,
@@ -67,7 +73,9 @@
             "repository": "https://github.com/Elianmtg/tvshow",
             "deployed": "https://elianmtg.github.io/tvshow"
         },
-        "summary": "<p>Web Page where you can search all your favorite Shows. With the Stack HTML, CSS and JavaScript.</p>"
+        "summary": "<p>Web Page where you can search all your favorite Shows. With the Stack HTML, CSS and JavaScript.</p>",
+        "next": "Student Control",
+        "previous": "MusicArt"
     },
     {
         "id": 5,
@@ -88,7 +96,9 @@
             "repository": "https://github.com/Elianmtg/ControlEstudiantil",
             "deployed": null
         },
-        "summary": "<p>This is the Fronend of a Full Stack project developed to the teachers be able to manage the grades and attendance of theirs students.</p>"
+        "summary": "<p>This is the Fronend of a Full Stack project developed to the teachers be able to manage the grades and attendance of theirs students.</p>",
+        "next": "Web Trailers",
+        "previous": "TvShow"
     },
     {
         "id": 6,
@@ -108,6 +118,8 @@
             "repository": "https://github.com/WilkendrysCastillo16/Programacion-Web-Trailers",
             "deployed": null
         },
-        "summary": "<p>Web page to management movies trailers. There are two types of user: Client and Admin that is controled with a optional login. The Admin can publish, edit and delete movies trailers.</p>"
+        "summary": "<p>Web page to management movies trailers. There are two types of user: Client and Admin that is controled with a optional login. The Admin can publish, edit and delete movies trailers.</p>",
+        "next": null,
+        "previous": "Student Control"
     }
 ]
