fix: paragraph of detail

--- a/src/services/data/Projects.json
+++ b/src/services/data/Projects.json
@@ -14,7 +14,10 @@
             "repository": "https://github.com/eliangermosen/Pokedex",
             "deployed": "https://pokedex-elian.vercel.app/"
         },
-        "summary": "<p>Pokedex with the functionality: filter all Pokémon, Responsive design just with CSS, useEffect, useState, customHooks and so on.</p>",
+        "summary": [
+            "Pokedex with the functionality: filter all Pokémon, Responsive design just with CSS, useEffect, useState, customHooks and so on.",
+            "I started this project doing the UI Design in figma. The API that i used it is PokéAPI."
+        ],
         "next": "Giffy",
         "previous": null
     },
@@ -33,7 +36,11 @@
             "repository": "https://github.com/eliangermosen/Giffy",
             "deployed": "https://giffy-elian.netlify.app/"
         },
-        "summary": "<p>Gifs finder in React with hooks, custom hooks, lazy load, suspense, infinite scroll, style components, css, test with React Testing Library and munch more.</p>",
+        "summary": [
+            "Gifs finder in React with hooks, custom hooks, lazy load, suspense, infinite scroll, style components, css, test with React Testing Library and munch more.",
+            "I developed this project taking a course of @midudev and we used the API of GIPHY."
+        ],
+        
         "next": "MusicArt",
         "previous": "Pokedex"
     },
@@ -53,7 +60,11 @@
             "repository": "https://github.com/eliangermosen/musicArt",
             "deployed": "https://eliangermosen.github.io/musicArt"
         },
-        "summary": "<p>Web Page where you can search and sing the Song of your favorites Artists and at the same time read him/her biography. I used for the Stack for this project HTML, CSS and JavaScript.</p>",
+        "summary": [
+            "Web Page where you can search and sing the Song of your favorites Artists and at the same time read him/her biography. I used for the Stack for this project HTML, CSS and JavaScript.",
+            "I used two API: AUDIO DB for the biography of the artist and lyrics.ovh for the lyrics of the song. I started this project doing the UI Design in figma"
+        ]
+        ,
         "next": "TvShow",
         "previous": "Giffy"
     },
@@ -73,7 +84,10 @@
             "repository": "https://github.com/eliangermosen/tvshow",
             "deployed": "https://eliangermosen.github.io/tvshow"
         },
-        "summary": "<p>Web Page where you can search all your favorite Shows. With the Stack HTML, CSS and JavaScript.</p>",
+        "summary": [
+            "Web Page where you can search all your favorite Shows. With the Stack HTML, CSS and JavaScript.",
+            "I used TVmaze API: For the info of the shows. I started this project doing the UI Design in figma."
+        ],
         "next": "Student Control",
         "previous": "MusicArt"
     },
@@ -96,7 +110,10 @@
             "repository": "https://github.com/eliangermosen/ControlEstudiantil",
             "deployed": null
         },
-        "summary": "<p>This is the Fronend of a Full Stack project developed to the teachers be able to manage the grades and attendance of theirs students.</p>",
+        "summary": [
+            "This is the Fronend of a Full Stack project developed to the teachers be able to manage the grades and attendance of theirs students.",
+            "The libraries that I used are Angular Material, ngx-charts, jspdf and SweetAlert2. If you want to se the backen of the project go to my GitHub account for more."
+        ],
         "next": "Web Trailers",
         "previous": "TvShow"
     },
@@ -118,7 +135,10 @@
             "repository": "https://github.com/WilkendrysCastillo16/Programacion-Web-Trailers",
             "deployed": null
         },
-        "summary": "<p>Web page to management movies trailers. There are two types of user: Client and Admin that is controled with a optional login. The Admin can publish, edit and delete movies trailers.</p>",
+        "summary": [
+            "Web page to management movies trailers. There are two types of user: Client and Admin that is controled with a optional login. The Admin can publish, edit and delete movies trailers.",
+            "This is a collaborative project with some of my classmates from ITLA. If you want to se the backen of the project go to my GitHub account for more."
+        ],
         "next": null,
         "previous": "Student Control"
     }
